--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "sgCarMart API",
     "type": "library",
     "require": {
+        "php": ">=5.6.0",
         "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
